--- a/WebApplicationPhoneBook.csproj
+++ b/WebApplicationPhoneBook.csproj
@@ -7,11 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <_ContentIncludedByDefault Remove="Properties\cities.json" />
     <_ContentIncludedByDefault Remove="wwwroot\css\myStyle.css" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="wwwroot\img\" />
+    <Folder Include="wwwroot\Новая папка\" />
   </ItemGroup>
 
   <ItemGroup>
